[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/clock/clock.png" type="Texture" id=1]
[ext_resource path="res://assets/clock/clockhand_1.png" type="Texture" id=2]
[ext_resource path="res://assets/clock/clockhand_0.png" type="Texture" id=3]
[ext_resource path="res://scenes/Clock.gd" type="Script" id=4]

[node name="Clock" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="ClockPosition" type="Node2D" parent="."]

[node name="ClockSprite" type="Sprite" parent="ClockPosition"]
texture = ExtResource( 1 )

[node name="LargeHand" type="Sprite" parent="ClockPosition"]
position = Vector2( -0.5, -0.5 )
texture = ExtResource( 3 )

[node name="SmallHand" type="Sprite" parent="ClockPosition"]
position = Vector2( -0.5, -0.5 )
texture = ExtResource( 2 )
